[tool.poetry]
name = "git-branch-manager"
version = "0.1.0"
description = ""
authors = ["Dipto Karmakar <diptokmk47@gmail.com>"]
readme = "README.md"
packages = [{include = "git_branch_manager"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
